--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,25 @@ loggerServiceApp
 listenerApp
 frontEndApp
 brokerApp
+
+# dependencies
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# misc
+*.pem
+
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
