--- a/whiteboard-app/whiteboard-app/package.json
+++ b/whiteboard-app/whiteboard-app/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons": "^3.12.0",
+    "@tabler/icons-react": "^3.12.0",
+    "@telegram-apps/telegram-ui": "^2.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
